# cryptography_with_rust

./: Cargo.toml
benches/: bench_kyber.rs  bench_sha256.rs
examples/: birthday_attack_on_sha256.rs  file_hasher.rs
src/: lib.rs
src/aes/: aes_cbc.rs  aes_ecb.rs  aes_gcm.rs  constants.rs  mod.rs
src/ecdsa/: elliptic_curve.rs  finite_field.rs  mod.rs
src/hash/: mod.rs  sha256.rs  sha3_wrapper.rs
src/heaan_rns/: approx_modulus_switch.rs  context.rs  key.rs  math_utils.rs  mod.rs  plaintext.rs  scheme.rs  utils.rs
src/kyber/: README.md  bytearray.rs  compress.rs  encode.rs  kem.rs  mod.rs  pke.rs  utils.rs
src/math/: constants.rs  elliptic_curve.rs  fft.rs  finite_field.rs  matrix.rs  mod.rs  ntt.rs  poly.rs  prime.rs
src/sha256/: mod.rs
