[package]
name = "cryptography_with_rust"
version = "0.1.0"
authors = ["Zhang Tianwei <zhangtianwei1015@gmail.com>"]
edition = "2021"
autoexamples = false

[[bin]]
name = "hasher"
path = "examples/file_hasher.rs"
doc = false

[[bin]]
name = "birthday_attack_on_sha256"
path = "examples/birthday_attack_on_sha256.rs"
doc = false

[dependencies]
num-bigint = { version = "0.4.4", features = ["rand"] }
rand = "0.8.5"

[dev-dependencies]
hex = "0.4.3"
criterion = "0.5.1"
ring = "0.17.7"

[[bench]]
name = "bench_sha256"
harness = false